# gef-experiments

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  CMakeLists.txt  README.md  elf_test  elf_ub_test  falcon_loop_test  falcon_test  generate_plots.sh  generate_tables.sh  install_datasets.sh  reproduce_camel  run_benchmarks.sh  test_camel_efficiency
.github/workflows/: build-linux.yml
benchmark/: alp_benchmark.cpp  benchmark_common.hpp  inverted_index_benchmark.cpp  leco_benchmark.cpp  lossless_benchmark.cpp
benchmark/Buff/: CompressorBuff.hpp  buff_ffi.h
benchmark/Camel/: CompressorCamel.hpp  DecompressorCamel.hpp
benchmark/Elf/: CompressorElf.hpp  DecompressorElf.hpp
benchmark/Falcon/: CompressorFalcon.hpp  DecompressorFalcon.hpp  Falcon_basic_compressor.cpp  Falcon_basic_compressor.h  Falcon_basic_decompressor.cpp  Falcon_basic_decompressor.h  array.h  input_bit_stream.cc  input_bit_stream.h  output_bit_stream.cc  output_bit_stream.h  utils.cpp  utils.h
benchmark/NeaTS/: NeaTS.hpp  algorithms.hpp  float_pfa.hpp
benchmark/TSXor/: CompressorTSXor.hpp
benchmark/lib/: BitStream.hpp
benchmark_results/: dataset_normalized_optimized.csv  dataset_normalized_optimized_v2.csv  results.csv  test.csv
datasets/: datasets_archive.z01
include/: NeaTS.hpp
lib/buff-ffi/: Cargo.toml
lib/buff-ffi/src/: lib.rs
lib/sux-rs-ffi/: Cargo.toml
lib/sux-rs-ffi/include/: sux_rs_ffi.h
lib/sux-rs-ffi/src/: lib.rs
scripts/: compact_tables.py  dataset_stats.py  full_tables.py  pareto_plots.py  prepare_inverted_index_data.sh  tables.py
tables/: table_compression_ratio.tex  table_compression_throughput.tex  table_decompression_throughput.tex  table_random_access.tex
