[package]
name = "buff-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "buff_ffi"
crate-type = ["staticlib"]

# No external dependencies: the encode/decode algorithm is self-contained.
# Vendored from https://github.com/Tranway1/buff (MIT).

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
panic = "abort"
